--- a/notebooks/weather_producer.ipynb
+++ b/notebooks/weather_producer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "d4dfd8b8-ff3b-42a7-8f37-19d959e41049",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: kafka-python in /opt/conda/lib/python3.11/site-packages (2.3.0)\n",
+      "Collecting kafka-python\n",
+      "  Downloading kafka_python-2.3.0-py2.py3-none-any.whl.metadata (10.0 kB)\n",
       "Requirement already satisfied: requests in /opt/conda/lib/python3.11/site-packages (2.31.0)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/conda/lib/python3.11/site-packages (from requests) (3.3.0)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.11/site-packages (from requests) (3.4)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/conda/lib/python3.11/site-packages (from requests) (2.0.7)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.11/site-packages (from requests) (2023.7.22)\n"
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.11/site-packages (from requests) (2023.7.22)\n",
+      "Downloading kafka_python-2.3.0-py2.py3-none-any.whl (326 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m326.3/326.3 kB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: kafka-python\n",
+      "Successfully installed kafka-python-2.3.0\n"
      ]
     }
    ],
@@ -25,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "d1327d02-f4cb-4bfb-87ba-5cd10d6dab05",
    "metadata": {},
    "outputs": [],
@@ -36,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "fe30d408-8ca2-4327-a477-dc32f851ef7e",
    "metadata": {},
    "outputs": [
@@ -45,23 +50,11 @@
      "output_type": "stream",
      "text": [
       "Weather streaming producer started...\n",
-      "Sent to weather_transformed: {'time': '2026-01-22T10:15', 'interval': 900, 'temperature': 7.2, 'windspeed': 16.6, 'winddirection': 347, 'is_day': 1, 'weathercode': 61, 'temp_f': 44.96, 'high_wind_alert': True}\n",
-      "Sent to weather_transformed: {'time': '2026-01-22T10:15', 'interval': 900, 'temperature': 7.2, 'windspeed': 16.6, 'winddirection': 347, 'is_day': 1, 'weathercode': 61, 'temp_f': 44.96, 'high_wind_alert': True}\n",
-      "Sent to weather_transformed: {'time': '2026-01-22T10:15', 'interval': 900, 'temperature': 7.3, 'windspeed': 15.5, 'winddirection': 347, 'is_day': 1, 'weathercode': 61, 'temp_f': 45.14, 'high_wind_alert': True}\n",
-      "Sent to weather_transformed: {'time': '2026-01-22T10:15', 'interval': 900, 'temperature': 7.3, 'windspeed': 15.5, 'winddirection': 347, 'is_day': 1, 'weathercode': 61, 'temp_f': 45.14, 'high_wind_alert': True}\n",
-      "Sent to weather_transformed: {'time': '2026-01-22T10:15', 'interval': 900, 'temperature': 7.3, 'windspeed': 15.5, 'winddirection': 347, 'is_day': 1, 'weathercode': 61, 'temp_f': 45.14, 'high_wind_alert': True}\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/jovyan/src\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mweather_producer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m main, fetch_weather, transform_weather\n\u001b[0;32m----> 7\u001b[0m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/src/weather_producer.py:42\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m     41\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError fetching or sending weather:\u001b[39m\u001b[38;5;124m\"\u001b[39m, e)\n\u001b[0;32m---> 42\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m30\u001b[39m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n"
      ]
     }
    ],
@@ -78,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "395d3f74-d001-474e-9f15-f26604a9313f",
+   "id": "8471217f-4719-45cf-9c4a-badb7a96eee0",
    "metadata": {},
    "outputs": [],
    "source": []
