just updating a stream record

--- a/notebooks/weather_producer.ipynb
+++ b/notebooks/weather_producer.ipynb
@@ -54,7 +54,21 @@
       "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
       "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
       "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
-      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n"
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:30', 'interval': 900, 'temperature': 8.2, 'windspeed': 2.1, 'winddirection': 31, 'is_day': 1, 'weathercode': 2, 'temp_f': 46.76, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:45', 'interval': 900, 'temperature': 8.0, 'windspeed': 1.6, 'winddirection': 27, 'is_day': 0, 'weathercode': 2, 'temp_f': 46.4, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:45', 'interval': 900, 'temperature': 8.0, 'windspeed': 1.6, 'winddirection': 27, 'is_day': 0, 'weathercode': 2, 'temp_f': 46.4, 'high_wind_alert': False}\n",
+      "Sent to weather_transformed: {'time': '2026-01-22T16:45', 'interval': 900, 'temperature': 8.0, 'windspeed': 1.6, 'winddirection': 27, 'is_day': 0, 'weathercode': 2, 'temp_f': 46.4, 'high_wind_alert': False}\n"
      ]
     }
    ],
